#
# Copyright 2024 Sven Mikael Persson
#

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "concepts",
    hdrs = [
        "ss_controller_concept.h",
    ],
    deps = [
        "//ReaK/control/systems:concepts",
        "//ReaK/topologies/spaces:concepts",
    ],
)

cc_library(
    name = "controllers",
    hdrs = [
        "IHAQR_topology.h",
        "MEAQR_topology.h",
        "lqr_controllers.h",
    ],
    deps = [
        "//ReaK/control/integrators",
        "//ReaK/control/systems:concepts",
        "//ReaK/core/base",
        "//ReaK/geometry/proximity",
        "//ReaK/math/lin_alg",
        "//ReaK/mbd/models",
        "//ReaK/topologies/interpolation",
        "//ReaK/topologies/spaces",
        "//ReaK/topologies/spaces:concepts",
        "//ReaK/topologies/spaces:manip_spaces",
    ],
)
