#
# Copyright 2024 Sven Mikael Persson
#

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "integrators",
    hdrs = [
        "adams_BM3_integrator_sys.h",
        "adams_BM5_integrator_sys.h",
        "dormand_prince45_integrator_sys.h",
        "euler_integrator_sys.h",
        "fehlberg45_integrator_sys.h",
        "hamming_iter_mod_integrator_sys.h",
        "hamming_mod_integrator_sys.h",
        "midpoint_integrator_sys.h",
        "runge_kutta4_integrator_sys.h",
        "runge_kutta5_integrator_sys.h",
    ],
    deps = [
        "//ReaK/control/systems:concepts",
        "//ReaK/core/base",
        "//ReaK/math/integrators",
        "//ReaK/math/lin_alg",
        "//ReaK/topologies/interpolation:concepts",
        "//ReaK/topologies/spaces",
        "//ReaK/topologies/spaces:concepts",
    ],
)
