#
# Copyright 2024 Sven Mikael Persson
#

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "cnst_string",
    srcs = [],
    hdrs = ["cnst_string.h"],
    deps = [],
)

cc_test(
    name = "cnst_string_test",
    srcs = ["cnst_string_test.cc"],
    deps = [
        ":cnst_string",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "endian_conversions",
    srcs = [],
    hdrs = ["endian_conversions.h"],
    deps = [],
)

cc_test(
    name = "endian_conversions_test",
    srcs = ["endian_conversions_test.cc"],
    deps = [
        ":endian_conversions",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "base",
    srcs = [],
    hdrs = [
        "global_rng.h",
        "named_object.h",
        "scope_guard.h",
        "shared_object.h",
    ],
    deps = [
        "//ReaK/core/rtti",
        "//ReaK/core/serialization:serialization_base",
    ],
)

# if(Python3_FOUND)
#   reak_cc_library(
#     NAME
#       py_base
#     SRCS
#       "py_base.cc"
#     DEPS
#       ReaK::base
#       ${PYTHON_LIBRARIES}
#       ${Boost_LIBRARIES}
#       ${EXTRA_SYSTEM_LIBS}
#     PUBLIC
#   )
# endif()
